--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,10 +9,24 @@ body {
   overflow-y: scroll;
   /* background-color: black; */
   color: white;
+
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+html,
+body:focus {
+  outline: none !important;
 }
 
 ::-webkit-scrollbar {
   width: 4px;
+  display: none;
 }
 
 ::-webkit-scrollbar:horizontal {
